<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/doctor"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/pin"
            android:onClick=""
            android:title="@string/menu_sym" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/heart"
            android:title="@string/menu_map" />
        <item
            android:id="@+id/nav_prof"
            android:icon="@drawable/prof"
            android:title="Edit Profile" />

    </group>
</menu>
