<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_margin="5dp"
    android:orientation="vertical"
    tools:context=".RegionData">


    <TextView
        android:id="@+id/regionName"
        android:layout_width="match_parent"
        android:layout_height="31dp"
        android:layout_margin="5dp"
        android:background="@drawable/butt2"
        android:gravity="center_horizontal"
        android:text="@string/region_name14"
        android:fontFamily="sans-serif-condensed-medium"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="Suspicious0dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:gravity="center_horizontal"
                android:text="@string/total_cases14"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/region_total_cases"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:text="@string/dashes14"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="Suspicious0dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:gravity="center_horizontal"
                android:text="@string/active_cases14"
                android:textAlignment="center"
                android:textColor="#F44336"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/region_active_cases"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:text="@string/dashes14"
                android:textAlignment="center"
                android:textColor="#F44336"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="Suspicious0dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:gravity="center_horizontal"
                android:text="@string/recovered_cases14"
                android:textAlignment="center"
                android:textColor="#25B32B"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/region_recovered_cases"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:text="@string/dashes14"
                android:textAlignment="center"
                android:textColor="#2BB130"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="Suspicious0dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:gravity="center_horizontal"
                android:text="@string/deceased14"
                android:textAlignment="center"
                android:textColor="#2C2C2C"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/region_deceased_cases"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:text="@string/dashes14"
                android:textAlignment="center"
                android:textColor="#333232"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp">

    </Space>

</LinearLayout>