<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#ffffff"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/next"
            android:layout_width="383dp"
            android:layout_height="114dp"
            android:layout_marginTop="16dp"

            android:background="@drawable/block"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center"
            android:hint="@string/status25"
            android:textColor="#ffffff"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.428"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="164dp"
            android:layout_height="76dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/butt1"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center"
            android:onClick="telephone"
            android:text="@string/consult_doctor25"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/next" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="164dp"
            android:layout_height="77dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/butt2"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center"
            android:onClick="prevent"
            android:text="@string/prevention_controls25"
            android:textColor="#ffffff"
            android:textSize="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <ImageView
            android:id="@+id/usfo"
            android:layout_width="226dp"
            android:layout_height="221dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/sympcheck"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="164dp"
            android:layout_height="77dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/butt3"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center"
            android:onClick="Goo"
            android:text="@string/updates25"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <Button
            android:id="@+id/button"
            android:layout_width="85dp"
            android:layout_height="33dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/buttonblue"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center"
            android:onClick="back"
            android:text="@string/back25"
            android:textAlignment="center"
            android:textColor="#ffffff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>