<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="4dp"
    android:background="#ffffff"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="94dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/block"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center_horizontal"
            android:text="@string/organizations22"

            android:textColor="#ffffff"
            android:textSize="65dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="350dp"
            android:layout_height="400dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/don" />

        <TextView
            android:id="@+id/textView26"
            android:layout_width="218dp"
            android:layout_height="60dp"
            android:layout_marginTop="205dp"
            android:background="@drawable/butt3"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center"
            android:onClick="site1"
            android:text="@string/ram_volunteer_corps22"
            android:textColor="#ffffff"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView28"
            android:layout_width="213dp"
            android:layout_height="60dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/butt1"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center"
            android:onClick="site2"
            android:text="@string/ivolunteer_relief_trust22"
            android:textColor="#ffffff"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView32" />

        <TextView
            android:id="@+id/textView31"
            android:layout_width="213dp"
            android:layout_height="60dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/butt2"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center"
            android:onClick="site3"
            android:text="@string/war_against_covid1922"
            android:textColor="#ffffff"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView28" />

        <TextView
            android:id="@+id/textView32"
            android:layout_width="213dp"
            android:layout_height="60dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/buttonblue"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center"
            android:onClick="site4"
            android:text="@string/un_volunteer22"
            android:textColor="#ffffff"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView26" />

        <ImageView
            android:id="@+id/help"
            android:layout_width="280dp"
            android:layout_height="80dp"
            android:layout_marginTop="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView31"
            app:srcCompat="@drawable/help" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
